Package: calmate
================

Version: 0.6.4 [2011-03-08]
o GENERALIZATION: Now allocateOutputDataSets() for CalMaTeCalibration
  no longer requires write permissions if the data set already exists.
o Added argument 'references' to the CalMaTeCalibration constructor.


Version: 0.6.3 [2010-11-02]
o Updated the help page for the package itself.


Version: 0.6.2 [2010-09-28]
o Updated the example for the CalMaTeCalibration help page to
  illustrate how to extract the total copy numbers correctly.


Version: 0.6.1 [2010-08-05]
o ROBUSTNESS: Now calmateByThetaAB() and calmateByTotalAndFracB() 
  asserts that there are at least two samples.
o BUG FIX: calmateByTotalAndFracB() assumed that there where enough
  units and samples so that subsetting would not drop singleton 
  dimension.  Now we use drop=FALSE everywhere.
o BUG FIX: calmateByThetaAB() would not work if there was only one unit.


Version: 0.6.0 [2010-08-02]
o Added argument 'refAvgFcn' to calmateByTotalAndFracB() and
  calmateByThetaAB().  It is used to standardize the total copy number
  of both SNPs and non-polymorphic loci using the same estimator
  for the average reference signal.


Version: 0.5.2 [2010-08-02]
o CLEANUP: Dropped obsolete internal calmate() and refineCN() functions.


Version: 0.5.1 [2010-07-31]
o BUG FIX: process() for CalMaTeCalibration would only run one chunk.


Version: 0.5.0 [2010-07-30]
o Renamed CalMaTeNormalization to CalMaTeCalibration.


Version: 0.4.2 [2010-07-22]
o BUG FIX: Now process() for CalMaTeNormalization returns immediately 
  if there are no units left.


Version: 0.4.1 [2010-06-29]
o Added support for process(..., force=TRUE) in CalMaTeNormalization.


Version: 0.4.0 [2010-06-21]
o Added an early version (really!) of CalMaTeNormalization.
  It still does not store parameter estimates; only the
  normalized signals.


Version: 0.3.1 [2010-06-19]
o Now the default CalMaTe method is no longer truncating
  negative ASCN signals.